--- a/src/overall.css
+++ b/src/overall.css
@@ -17,7 +17,7 @@
     display: flex;
     opacity: 0.8;
     color:rgb(238, 238, 238);
-    background:rgba(41, 3, 44, 0.8);
+    /*background:rgba(41, 3, 44, 0.8);*/
     animation: revelations 1.5s ease-in;
     /*border-bottom: 1px solid purple;*/
 
