--- a/src/overall.css
+++ b/src/overall.css
@@ -85,7 +85,6 @@
 }
 .right ul li  a:hover{
     color:orange;
-    border-bottom: 1px solid orange;
 }
 @keyframes rev{
     0%{
@@ -114,6 +113,51 @@
 /*.btn{
     margin-top: 8%;
 }*/
+.pic-container h1{
+    font-weight: 900;
+    animation: heading 3s ease-in;
+}
+@keyframes heading {
+    0%{
+        opacity:0.1;
+    }
+    50%{
+        opacity: 0.6;
+    }
+    100%{
+        opacity: 0.8;
+    }
+}
+.pic-container p{
+    font-weight: 700;
+    animation: para 2s ease-in;
+}
+@keyframes para {
+    0%{
+        transform: translateY(3em);
+        opacity:0.15;
+    }
+    20%{
+        transform: translateY(2.5em);
+        opacity:0.30;
+    }
+    40%{
+        transform: translateY(2em);
+        opacity:0.45;
+    }
+    60%{
+        transform: translateY(1.5em);
+        opacity:0.50;
+    }
+    80%{
+        transform: translateY(1em);
+        opacity:0.65;
+    }
+    100%{
+        transform: translateY(0em);
+        opacity:0.80;
+    }
+}
 @media (max-width:800px)
 {
     .forhead{
