--- a/src/overall.css
+++ b/src/overall.css
@@ -289,6 +289,7 @@
 {
     height:auto;
     background: black;
+    background-size: cover;
     color:white;
 }
 .holds1{
@@ -299,13 +300,64 @@
     align-items: center;
 }
 .holds1 input{
-    width: 500px;
+    width: 35%;
 }
 .bottomhold{
     display: flex;
     height:100px;
     justify-content: center;
     align-items: center;
+}
+/*historyui*/
+
+.ui{
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0,0.7);
+    color:white;
+}
+.titled1 p{
+    font-size: 34px;
+}
+.mess{
+    display: flex;
+    flex-direction: row;
+    width:100%;
+    justify-content: space-around;
+    align-items: center;
+    height:200px;
+}
+.mess p{
+    font-size: 22px;
+    font-style: italic;
+}
+.loadingtimes{
+    height:700px;
+    background: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color:white;
+}
+.loadingtimes p{
+    font-size: 30px;
+    margin-left:1.5%;
+}
+.loadingtimes .spinner-border{
+    margin-top:-1%;
+}
+.historic p{
+    font-size: 38px;
+    text-align: center;
+}
+.copies{
+    background: url("./images/cov2.jpg");
+    background-attachment: fixed;
+    background-size: cover;
 }
 @media (max-width:800px)
 {
